# asiayo_pretest

./: README.md  情境實戰測驗.md
Question1/: pyproject.toml  script.py
Question2/manifest_file/: asia_yo_manifest.yaml  mysql_manifest.yaml
Question2/tf_file/: main.tf  terraform.tfvars
Question3/: Question3.txt
